[gd_scene load_steps=3 format=3 uid="uid://crwce2voha8mt"]

[ext_resource type="Script" path="res://menus/help_menu.gd" id="1_pdw4c"]
[ext_resource type="PackedScene" uid="uid://ch51mvl5giece" path="res://menus/default_button.tscn" id="2_3n0ip"]

[node name="HelpMenu" type="Panel"]
process_mode = 3
top_level = true
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pdw4c")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "How to play"
horizontal_alignment = 1

[node name="ScreensAndMenuButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ScreenOne" type="VBoxContainer" parent="VBoxContainer/ScreensAndMenuButtons"]
custom_minimum_size = Vector2(185, 130)
layout_mode = 2
alignment = 1

[node name="ControlsTitle" type="Label" parent="VBoxContainer/ScreensAndMenuButtons/ScreenOne"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Controls"

[node name="ControlsLabel" type="Label" parent="VBoxContainer/ScreensAndMenuButtons/ScreenOne"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Arrow Keys: Move Cursor
Enter: Menu accept
Z: Menu Back
Q: Toggle Action Queue
H: Open help menu"

[node name="ScreenTwo" type="VBoxContainer" parent="VBoxContainer/ScreensAndMenuButtons"]
visible = false
custom_minimum_size = Vector2(185, 130)
layout_mode = 2
alignment = 1

[node name="IngressTitle" type="Label" parent="VBoxContainer/ScreensAndMenuButtons/ScreenTwo"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Ingress"

[node name="IngressLabel" type="Label" parent="VBoxContainer/ScreensAndMenuButtons/ScreenTwo"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Ingress: Your energy. 
Run out and it's game over!
Incursion: Your attack power 
Refrain: Your defense power"

[node name="ScreenThree" type="VBoxContainer" parent="VBoxContainer/ScreensAndMenuButtons"]
visible = false
custom_minimum_size = Vector2(185, 130)
layout_mode = 2
alignment = 1

[node name="ElementsTitle" type="Label" parent="VBoxContainer/ScreensAndMenuButtons/ScreenThree"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Elements"

[node name="ElementsLabel" type="Label" parent="VBoxContainer/ScreensAndMenuButtons/ScreenThree"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Eth: Wind based, Green
Enh: Earth based, Orange
Shor: Water based, Blue
Scor: Fire based, Red"

[node name="Buttons" type="VBoxContainer" parent="VBoxContainer/ScreensAndMenuButtons"]
custom_minimum_size = Vector2(2.08165e-12, 130)
layout_mode = 2
alignment = 1

[node name="CloseButton" parent="VBoxContainer/ScreensAndMenuButtons/Buttons" instance=ExtResource("2_3n0ip")]
custom_minimum_size = Vector2(100, 15)
layout_mode = 2
size_flags_horizontal = 4
text = "Return To Game"

[node name="RestartBattleButton" parent="VBoxContainer/ScreensAndMenuButtons/Buttons" instance=ExtResource("2_3n0ip")]
custom_minimum_size = Vector2(100, 15)
layout_mode = 2
size_flags_horizontal = 4
text = "Restart Battle"

[node name="RestartGameButton" parent="VBoxContainer/ScreensAndMenuButtons/Buttons" instance=ExtResource("2_3n0ip")]
custom_minimum_size = Vector2(100, 15)
layout_mode = 2
size_flags_horizontal = 4
text = "Restart Game"

[node name="ExitGame" parent="VBoxContainer/ScreensAndMenuButtons/Buttons" instance=ExtResource("2_3n0ip")]
custom_minimum_size = Vector2(100, 15)
layout_mode = 2
size_flags_horizontal = 4
text = "Exit Game"

[node name="ScreenButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PreviousButton" parent="VBoxContainer/ScreenButtons" instance=ExtResource("2_3n0ip")]
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Previous"

[node name="NextButton" parent="VBoxContainer/ScreenButtons" instance=ExtResource("2_3n0ip")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Next"

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="VBoxContainer/ScreensAndMenuButtons/Buttons/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScreensAndMenuButtons/Buttons/RestartBattleButton" to="." method="_on_restart_battle_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScreensAndMenuButtons/Buttons/RestartGameButton" to="." method="_on_restart_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScreensAndMenuButtons/Buttons/ExitGame" to="." method="_on_exit_game_pressed"]
[connection signal="pressed" from="VBoxContainer/ScreenButtons/PreviousButton" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScreenButtons/NextButton" to="." method="_on_next_button_pressed"]
